bugfix z-index menu

--- a/app/assets/sass/main.sass
+++ b/app/assets/sass/main.sass
@@ -73,7 +73,7 @@
 		font-size: 24px
 		cursor: pointer
 		position: absolute
-		right: 35px
+		right: 20px
 		top: 25px
 		display: none
 
@@ -200,6 +200,7 @@
 				padding: 20px
 				top: 100%
 				display: none
+				z-index: 3
 				transition: none
 				.left
 					width: 100%
@@ -349,6 +350,7 @@
 					margin-bottom: 15px
 					margin-right: 0
 					display: inline-block
+					word-wrap: anywhere
 					z-index: 0
 					&::before
 						background-color: $text
